--- a/client/src/scss/_navbar.scss
+++ b/client/src/scss/_navbar.scss
@@ -2,10 +2,15 @@
 .login {
     margin-bottom: 10px;
 }
+.btn-container {
+    z-index: 99;
+}
 .addCard, .login {
     color: aliceblue;
     text-align: right;
-    cursor:pointer;   
+    cursor: pointer; 
+    margin-right: 10px;
+      
 }
 
 .addCard:hover, .login:hover {
